<resources>
    <string name="app_name">20121832_Muhammad-Hasyim-Asy\'ari</string>

    <string name="menuHome">Beranda</string>
    <string name="titleCollege">Kejar Perguruan Tinggi Impianmu</string>
    <string name="titleSchool">Pelajaran Sekolah</string>
    <string name="titleHistory">Lanjutkan Belajar</string>
    <string name="titleClass">Kelas 10 - KTSP 2006</string>
    <string name="titleQuestion">Bank Soal</string>
    <string name="hintSearch">Kamu mau belajar apa hari ini?</string>
    <string name="descClass">Total 7 Bab</string>
    <string name="descQuestion">Kumpulan soal terlengkap untuk siap menghadapi ujian.</string>
    <string name="snbt">SNBT</string>
    <string name="guide">Panduan</string>
    <string name="self">Mandiri</string>
    <string name="mathematic">Matematika</string>
    <string name="english">Bahasa Inggris</string>
    <string name="indonesian">Bahasa Indonesia</string>
    <string name="scienceNatural">IPA</string>
    <string name="scienceSocial">IPS</string>
    <string name="philosophy">Filsafat</string>
    <string name="technology">Teknologi</string>
    <string name="art">Seni</string>
    <string name="navVideo">Judul Video</string>
    <string name="navQuestion">Latihan Soal</string>
    <string name="chapter1">Bab 1</string>
    <string name="chapter2">Bab 2</string>
    <string name="chapter2_6">Bab 2.6</string>
    <string name="chapter3">Bab 3</string>
    <string name="chapter4">Bab 4</string>
    <string name="chapter4_1">Bab 4.1</string>
    <string name="chapter4_2">Bab 4.2</string>
    <string name="chapter4_3">Bab 4.3</string>
    <string name="chapter4_4">Bab 4.4</string>
    <string name="chapter4_5">Bab 4.5</string>
    <string name="chapter5">Bab 5</string>
    <string name="chapter5_3">Bab 5.3</string>
    <string name="chapter6">Bab 6</string>
    <string name="titleChapter1">Manfaat Ilmu Filsafat</string>
    <string name="titleChapter2">Sejarah Perkembangan Ilmu Filsafat</string>
    <string name="titleChapter3">Filsafat Ilmu dan Pengetahuan</string>
    <string name="titleChapter4">Logika Berpikir untuk Menemukan Kebenaran</string>
    <string name="titleChapter4_1">Bagaimana Cara Mendapatkan Kebenaran?</string>
    <string name="titleChapter4_2">Ukuran Kebenaran Menurut Filsafat</string>
    <string name="titleChapter4_3">Cara Filsafat Menyelesaikan Masalah</string>
    <string name="titleChapter4_4">Analisis Argumentasi dalam Kehidupan Sehari-hari</string>
    <string name="titleChapter5">Teori Kebenaran Ilmiah</string>
    <string name="titleChapter6">Tataran Ilmu Pengetahuan</string>
    <string name="timeChapter4_1">Video - 8:04 menit</string>
    <string name="timeChapter4_2">Video - 8:38 menit</string>
    <string name="timeChapter4_3">Video - 9:11 menit</string>
    <string name="timeChapter4_4">Video - 9:45 menit</string>
    <string name="close">×</string>
</resources>