<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.VideosActivity">

    <!-- Main Content -->
    <ImageView
        android:id="@+id/videoPlay"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/iv_video"/>
    <LinearLayout
        android:id="@+id/descVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoPlay"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chapter4"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/titleChapter4"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/titleChapter4_3"
            android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/navVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/descVideo"
        android:orientation="horizontal">
        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/navVideo"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#de9118"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/navQuestion"
            android:textSize="14sp"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/navLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/navVideo"
        android:orientation="vertical">
        <View
            android:layout_width="125dp"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#de9118"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#808080"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="35dp"
        android:layout_below="@id/navLine">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:src="@drawable/iv_video1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:text="@string/chapter4_1"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/titleChapter4_1"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timeChapter4_1"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#808080"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:src="@drawable/iv_video2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/chapter4_2"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/titleChapter4_2"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timeChapter4_2"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#808080"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:src="@drawable/iv_video3"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/chapter4_3"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/titleChapter4_3"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="#de9118"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timeChapter4_3"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#808080"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:src="@drawable/iv_video4"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/chapter4_4"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/titleChapter4_4"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timeChapter4_4"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#808080"/>
        </LinearLayout>
    </ScrollView>

    <!-- Close Navigation -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/black">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textAlignment="center"/>
    </RelativeLayout>
</RelativeLayout>